# jdav2021

./: .gitignore  Cargo.toml  KONZEPT  README.md  database.json  jdav2021.code-workspace  tests.rest
.github/workflows/: pr-check.yml  release.yml  rust.yml
jdav_client/: Cargo.toml  custom_styles.css  index.html  package-lock.json  package.json  yew_styles.css
jdav_client/src/: api.rs  edit_entry.rs  entriesview.rs  highscore.rs  highscoreview.rs  infoview.rs  main.rs  new_entry.rs  overview.rs  register.rs
jdav_client/src/api/: edit_entry.rs  get_entries.rs  highscore.rs  login.rs  mod.rs  new_entry.rs  register.rs
jdav_server/: Cargo.toml  database.json.backup
jdav_server/src/: db.rs  handlers.rs  main.rs  middleware.rs  models.rs  routes.rs
jdav_server/src/db/: db.rs  migration_to_v1.rs  mod.rs
jdav_server/src/db/migration/: migration_to_v1.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
