[package]
name = "frontend"
version = "0.1.0"
authors = ["torfmaster <briefe@kebes.de>"]
edition = "2018"

[dependencies]
yew = "0.17.4"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
shared = { path="../shared"}
yew_styles = { version="0.9", features=["button", "forms", "modal"] }

