[package]
name = "frontend"
version = "0.1.0"
authors = ["torfmaster <briefe@kebes.de>"]
edition = "2018"

[dependencies]
yew = "0.17.4"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
shared = { path="../shared"}
yew_styles = { version="0.9", features= ["button", "forms", "modal", "layouts", "card", "text"] }
yewtil = { version = "0.3.2", features = ["future", "fetch"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
chrono = {version="0.4.19", features=["serde", "std"]}
enum-iterator = "0.6.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]