[package]
name = "jdav_server"
version = "0.1.0"
authors = ["torfmaster <briefe@kebes.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.8"

