[package]
name = "jdav_server"
version = "0.1.0"
authors = ["torfmaster <briefe@kebes.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version="0.3.1", features=["tls"] }
tokio = { version = "1.5.0", features=["signal", "rt-multi-thread", "sync", "macros"] }
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.14"
uuid = { version="0.8.2", features=["serde", "v4"] }
structopt = "0.3"
rand = "0.8.3"
sha2 = "0.9.3"
base64 = "0.13.0"
shared = { path="../shared"}
chrono = {version="0.4.19", features=["serde", "std"]}


