[package]
name = "shared"
version = "0.1.0"
authors = ["torfmaster <briefe@kebes.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
uuid = { version="0.8.2", features=["serde", "v4"] }
